# ECSOpenGLEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
cmake/: FindIMGUI.cmake
include/components/: CameraComponent.hpp  IDComponent.hpp  MeshComponent.hpp  ModelComponent.hpp  PrimitiveComponent.hpp  SpriteComponent.hpp  TagComponent.hpp  TransformComponent.hpp
include/componentsFactory/: CameraFactory.hpp  PrimitiveFactory.hpp  SpriteFactory.hpp
include/core/: ResourceManager.hpp
include/glad/: glad.c  glad.h
include/graphics/: IndexBuffer.hpp  Mesh.hpp  Shader.hpp  Texture.hpp  TextureArray.hpp  VertexArrayBuffer.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp
include/input/: Input.hpp  InputDevice.hpp  InputKey.hpp  InputManager.hpp
include/scene/: Camera.hpp  Entity.hpp  Scene.hpp
include/utils/: Debug.hpp  StringUtils.hpp  UUID.hpp  Utils.hpp
lib/: glfw3.lib
res/models/gordon_freeman/: CHARACTER_Gordon.mtl
res/shaders/: default.frag  default.vert  model.frag  model.vert  texture.frag  texture.vert
sandbox/: CMakeLists.txt  main.cpp
src/Sandbox/: CMakeLists.txt  main.cpp
src/components/: CameraComponent.hpp  PrimitiveComponent.hpp  TagComponent.hpp
src/componentsFactory/: CameraFactory.cpp  PrimitiveFactory.cpp  PrimitiveFactory.hpp  SpriteFactory.cpp  SpriteFactory.hpp
src/core/: ResourceManager.cpp
src/graphics/: IndexBuffer.cpp  IndexBuffer.hpp  Mesh.cpp  Model.cpp  Model.hpp  Shader.cpp  Texture.cpp  TextureArray.cpp  VertexArrayBuffer.cpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.hpp
src/input/: Input.cpp  InputDevice.hpp  InputKey.hpp  InputManager.cpp
src/scene/: Camera.cpp  Entity.cpp  Scene.cpp
src/utils/: Debug.cpp  StringUtils.hpp  UUID.cpp
